# PIBellIneq

./: .gitignore  Nm2ratio.py  README.md  main.py  pyproject.toml
examples/: __init__.py  run_n22.py  run_n32.py
pi_bell_gradient/: __init__.py  core.py  n22.py  n32.py  spin.py
