[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-bell-gradient"
version = "0.1.0"
description = "Constrained-gradient searches for permutation-invariant (N,2,2) and (N,3,2) Bell inequalities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["pi_bell_gradient*"]
